--- a/Algorithms/heapsort.css
+++ b/Algorithms/heapsort.css
@@ -10,3 +10,11 @@
   height: 300px;
   vertical-align:top;
 }
+
+pre code {
+  display: block; padding: 0.5em;
+  background: #3F3F3F;
+  color: #DCDCDC;
+}
+
+
